fix overlapping donation banner
git-svn-id: https://code.downthemall.net/repos/trunk@1122 43940e1f-b481-bb45-89eb-5c6a4bf3d40a

--- a/chrome/skin/manager/style.css
+++ b/chrome/skin/manager/style.css
@@ -10,7 +10,9 @@ toolbox {
 #tools {
 	-moz-appearance: none !important;
 	border-width: 0px;
-	height: 51px;
+	height: 54px;
+	padding: 0;
+	margin: 0;
 }
 #tools toolbarbutton {
 	list-style-image: url(chrome://dta/skin/manager/tools.png);
